@@ -9,6 +9,7 @@ import com.dlsc.preferencesfx.formsfx.view.controls.IntegerSliderControl;
 import com.dlsc.preferencesfx.model.Category;
 import com.dlsc.preferencesfx.model.Group;
 import com.dlsc.preferencesfx.model.Setting;
+import java.io.File;
 import java.util.Arrays;
 import java.util.List;
 
@@ -26,7 +27,9 @@ import javafx.beans.property.SimpleStringProperty;
 import javafx.beans.property.StringProperty;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
+import javafx.scene.image.Image;
 import javafx.scene.layout.StackPane;
+import javafx.scene.paint.Color;
 
 public class ExtendedExample extends StackPane {
 
@@ -85,7 +88,7 @@ public class ExtendedExample extends StackPane {
 //  Theme
   ListProperty<String> themesLst = new SimpleListProperty<>(
       FXCollections.observableArrayList(
-          List.of("IntelliJ", "Darkula", "Windows")
+          Arrays.asList("IntelliJ", "Darkula", "Windows")
       )
   );
   ObjectProperty<String> themesObj = new SimpleObjectProperty<>("IntelliJ");
@@ -93,7 +96,7 @@ public class ExtendedExample extends StackPane {
   //  IDE
   ListProperty<String> ideLst = new SimpleListProperty<>(
       FXCollections.observableArrayList(
-          List.of("Subpixel", "Greyscale", "No Antializing")
+          Arrays.asList("Subpixel", "Greyscale", "No Antializing")
       )
   );
   ObjectProperty<String> ideObj = new SimpleObjectProperty<>("Subpixel");
@@ -101,7 +104,7 @@ public class ExtendedExample extends StackPane {
   //  Editor
   ListProperty<String> editorLst = new SimpleListProperty<>(
       FXCollections.observableArrayList(
-          List.of("Subpixel", "Greyscale", "No Antializing")
+          Arrays.asList("Subpixel", "Greyscale", "No Antializing")
       )
   );
   ObjectProperty<String> editorObj = new SimpleObjectProperty<>("Subpixel");
@@ -109,7 +112,7 @@ public class ExtendedExample extends StackPane {
   //  Font size
   ListProperty<String> fontLst = new SimpleListProperty<>(
       FXCollections.observableArrayList(
-          List.of("8", "10", "12", "14", "18", "20", "22", "24", "36", "72")
+          Arrays.asList("8", "10", "12", "14", "18", "20", "22", "24", "36", "72")
       )
   );
   ObjectProperty<String> fontObj = new SimpleObjectProperty<>("24");
@@ -117,7 +120,7 @@ public class ExtendedExample extends StackPane {
   //  Project opening
   ListProperty<String> projectOpeningLst = new SimpleListProperty<>(
       FXCollections.observableArrayList(
-          List.of("Open project in new window", "Open project in the same window", "Confirm window to open project in")
+          Arrays.asList("Open project in new window", "Open project in the same window", "Confirm window to open project in")
       )
   );
   ObjectProperty<String> projectOpeningObj = new SimpleObjectProperty<>("Open project in new window");
@@ -125,13 +128,28 @@ public class ExtendedExample extends StackPane {
   //  Closing tool window
   ListProperty<String> closingToolLst = new SimpleListProperty<>(
       FXCollections.observableArrayList(
-          List.of("Terminate process", "Disconnect (if available)", "Ask")
+          Arrays.asList("Terminate process", "Disconnect (if available)", "Ask")
       )
   );
   ObjectProperty<String> closingToolObj = new SimpleObjectProperty<>("Ask");
 
+  // Custom dialog icon
+  Image dialogIcon = new Image(AppStarter.class.getResource("screen_icon.png").toExternalForm());
+
+  // Color picker
+  ObjectProperty<Color> colorProperty = new SimpleObjectProperty<>(Color.PAPAYAWHIP);
+
+  // File Chooser
+  ObjectProperty<File> fileProperty = new SimpleObjectProperty<>();
+  ObjectProperty<File> fileDefaultProperty = new SimpleObjectProperty<>();
+
+  // Directory Chooser
+  ObjectProperty<File> directoryProperty = new SimpleObjectProperty<>();
+  ObjectProperty<File> directoryDefaultProperty = new SimpleObjectProperty<>();
+
+
   private PreferencesFx createPreferences() {
-    return PreferencesFx.of(AppStarter.class,
+    return PreferencesFx.of(ExtendedExample.class,
         Category.of("General",
             Group.of("Greeting",
                 Setting.of("Welcome Text", welcomeText)
@@ -153,8 +171,13 @@ public class ExtendedExample extends StackPane {
                     ).description("Screen Options"),
                     Group.of(
                         Setting.of("Font Size", fontSize, 6, 36),
-                        Setting.of("Line Spacing", lineSpacing, 0, 3, 1)
-                    )
+                        Setting.of("Font Color", colorProperty),
+                        Setting.of("Line Spacing", lineSpacing, 0, 3, 1),
+                        Setting.of("File", fileProperty, false),
+                        Setting.of("Folder", directoryProperty, "Browse", null, true),
+                        Setting.of("File with Default", fileDefaultProperty, new File("/"), false),
+                        Setting.of("Folder with Default", directoryDefaultProperty, new File("/"), true)
+                        )
                 )
             ),
         Category.of("Favorites",
@@ -343,6 +366,7 @@ public class ExtendedExample extends StackPane {
                 Category.of("XPath Viewer")
             ),
         Category.of("Other Settings")
-    ).persistWindowState(false).saveSettings(true).debugHistoryMode(false).buttonsVisibility(true);
+    ).persistWindowState(false).saveSettings(true).debugHistoryMode(false).buttonsVisibility(true)
+        .dialogTitle("Settings").dialogIcon(dialogIcon);
   }
 }
